<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".ActivityThree">

    <Button
        android:id="@+id/resetButton"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="251dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="432dp"
        android:text="@string/reset"
        android:onClick="resetGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/backToGame_button"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="342dp"
        android:text="@string/backToGame"
        android:onClick="openGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backToMainMenu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="259dp"
        android:text="@string/backToMainMenu"
        android:onClick="openMainMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>