<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="75dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="490dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="409dp"
        android:text="@string/opensStartGame"
        android:textAlignment="center"
        android:onClick="openMainGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/statisticsButton"
        android:onClick="openStatstics"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="358dp"
        android:text="@string/opensStatistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />

</android.support.constraint.ConstraintLayout>